--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4" id="clockDiv">
                 <div class="clock" style="margin:2em;"></div>
             </div>
         
